--- a/src/main/resources/validator-core-messages_nl.properties
+++ b/src/main/resources/validator-core-messages_nl.properties
@@ -38,6 +38,7 @@ validator.core.validation.geometry.ringnotclosed=Invalide polygoon. De ring is n
 
 validator.core.validation.geometry.surfacepatchesnotconnected=(To be translated) Invalid surface (gml:id: {0}). The patches of the surface are not connected.
 validator.core.validation.geometry.repetitionincurvesegment=(To be translated) Invalid geometry (gml:id: {0}). Repetition of coordinate in curve (segment). Internal representation of the curve segment: {1}. Repeated point: {2}.
+validator.core.validation.geometry.unsupportedgeometrytype=(To be translated) Cannot check connectivity of polygon patches for surface (gml:id: {0}). Reason: {1}.
 
 
 validator.core.validation.schematron.unknown-error=Onbekende fout tijdens regelvalidatie
